[gd_scene load_steps=7 format=2]

[ext_resource path="res://menus/upheavtt.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://menus/main_menu/main_menu.gd" type="Script" id=2]
[ext_resource path="res://menus/menu_button.tscn" type="PackedScene" id=3]
[ext_resource path="res://menus/settings/settings.tscn" type="PackedScene" id=4]

[sub_resource type="Animation" id=8]
resource_name = "fade"
length = 5.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2.5, 5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.145098, 0.156863, 0.176471, 1 ), Color( 0, 0, 0, 1 ), Color( 0.145098, 0.156863, 0.176471, 1 ) ]
}

[sub_resource type="DynamicFont" id=1]
size = 64
outline_size = 1
extra_spacing_char = 2
font_data = ExtResource( 1 )

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.145098, 0.156863, 0.176471, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="Background"]
autoplay = "fade"
anims/fade = SubResource( 8 )

[node name="Title" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -210.5
margin_top = -124.0
margin_right = 210.5
margin_bottom = -66.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.619608, 0.211765, 0.227451, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
text = "KILL ME NOW"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Options" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -97.0
margin_top = -50.0
margin_right = 97.0
margin_bottom = 50.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NewGameButton" parent="Options" instance=ExtResource( 3 )]
text = "New game"

[node name="LevelSelectButton" parent="Options" instance=ExtResource( 3 )]
margin_top = 26.0
margin_bottom = 48.0
text = "Level select"

[node name="SettingsButton" parent="Options" instance=ExtResource( 3 )]
margin_top = 52.0
margin_bottom = 74.0
text = "Settings"

[node name="ExitButton" parent="Options" instance=ExtResource( 3 )]
margin_top = 78.0
margin_bottom = 100.0
text = "Exit"

[node name="Settings" parent="." instance=ExtResource( 4 )]
[connection signal="pressed" from="Options/NewGameButton" to="." method="_on_NewGameButton_pressed"]
[connection signal="pressed" from="Options/LevelSelectButton" to="." method="_on_LevelSelectButton_pressed"]
[connection signal="pressed" from="Options/SettingsButton" to="." method="_on_SettingsButton_pressed"]
[connection signal="pressed" from="Options/ExitButton" to="." method="_on_ExitButton_pressed"]
[connection signal="popup_hide" from="Settings" to="." method="_on_Settings_popup_hide"]
